--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
  .bloc{
   background: #FFFFFF;
-  margin-left: 50px;
-  margin-right: 50px;
+  /*margin-left: 50px;
+  margin-right: 50px;*/
   border: 1px solid #C1C1C1;
   font-family: monospace;
   font-size: 17px;
@@ -93,4 +93,3 @@ footer{
     text-align: center;
     margin-right: 0;
   }
-}
